build(build-logic): avoid JVM warnings when using Mockito